# hytato

./: .gitignore  README.md  potato.py  py33tester.bat  pyproject.toml  pytester.bat  pytester.txt  setup.py  test.py  tester_file.py
.github/workflows/: python-package-pre35.yml  python-package.yml
hytato/: hytato.py
potato/: potato.py  pyproject.toml
src/: __init__.py
