[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hypurrnatings_potato"
version = "0.1"
authors = [{ name="Hypurrnating" }]
description = "Module for storing python dictionaries in a different format."
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}


[project.urls]
"Homepage" = "https://github.com/Hypurrnating/potato"
"Bug Tracker" = "https://github.com/Hypurrnating/potato/issues"